--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,7 +20,7 @@
 }
 .navbar-logo {
   text-decoration: none;
-  color: rgba(23, 22, 24, 0.76);
+  color: rgba(13, 13, 14, 0.76);
   font-weight: 200;
   align-self: center;
 }
@@ -30,7 +30,7 @@
   width: 100%;
   align-items: center;
   justify-content: flex-end;
-  color: rgb(24, 23, 22);
+  color: rgb(112, 97, 81);
   /* background-color: darkorange; */
 }
 ul {
@@ -40,7 +40,7 @@ ul {
   padding: 30px;
 }
 .nav-link {
-  color: rgb(21, 22, 21);
+  color: rgb(13, 14, 13);
   text-decoration: none;
 }
 .menu-icon {
@@ -70,7 +70,7 @@ ul {
     /* z-index: 1000; */
   }
   .nav-menu.active {
-    background: #1c2237;
+    background: #4a548a;
     left: 0;
     opacity: 1;
     transition: all 0.6s ease;
