--- a/src/components/travel.css
+++ b/src/components/travel.css
@@ -4,16 +4,15 @@
   align-items: center;
   flex-direction: column;
   font-size: x-large;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   color: rgb(20, 19, 19);
   background-image: linear-gradient(
-      rgb(248, 242, 242) 40%,
-      rgb(205, 238, 192) 60%
+      rgba(223, 132, 132, 0.6),
+      rgba(229, 243, 225, 0.2),
+      rgba(80, 2, 225, 0.2)
     ),
     url('./img/rajj.jpg');
-
-  opacity: 0.5;
-
-  height: 100vh;
 }
 .travel-container p {
   width: 70%;
